[metadata]
name = pyModelChecking
author = Alberto Casagrande
author-email = acasagrande@units.it
summary = A Simple Python Model Checking Package
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://readthedocs.org/projects/pymodelchecking/
project_urls =
    Documentation = https://readthedocs.org/projects/pymodelchecking/
    Source Code = https://github.com/albertocasagrande/pyModelChecking
requires-python = >=2.7
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Topic :: Scientific/Engineering
	Programming Language :: Python
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.6
        Operating System :: OS Independent
        License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[files]
packages = 
    pyModelChecking

[pyModelChecking]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
   tests/
api_doc_dir = reference/api

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal = 1
